
  [ Debconf translations ]
  * Khmer added (Khoem Sokhem)
  * Slovenian (Vanja Cvelbar).  Closes: #670616
  * Traditional Chinese (Vincent Chen).
  * Vietnamese (Hai Lang).
  * Marathi (Sampada Nakhare)
  * Finnish (Timo Jyrinki).  Closes: #673976
  * Latvian (Rūdolfs Mazurs).  Closes: #674697

  [ Colin Watson ]
  * Make apport hook compatible with Python 3.

 -- Christian Perrier <bubulle@debian.org>  Fri, 06 Apr 2012 20:29:25 +0200

grub2 (1.99-21) unstable; urgency=low

  * Backport from upstream:
    - Fix hook calling for unaligned segments (closes: #666992,
      LP: #972250).

 -- Colin Watson <cjwatson@debian.org>  Tue, 03 Apr 2012 14:19:18 +0100

grub2 (1.99-20) unstable; urgency=low

  * Backport kFreeBSD support from upstream to 4k_sectors.patch.

 -- Colin Watson <cjwatson@debian.org>  Mon, 02 Apr 2012 21:53:02 +0100

grub2 (1.99-19) unstable; urgency=low

  [ Colin Watson ]
  * Add grub-probe to grub-mount-udeb (LP: #963471).
  * Backport from upstream:
    - Restore CFLAGS after efiemu check (closes: #665772).
    - Include __ctzdi2 and __ctzsi2 from libgcc if present (closes:
      #665993).
    - Support non-512B sectors and agglomerate reads.

  [ Debconf translations ]
  * Croatian (Tomislav Krznar).

 -- Colin Watson <cjwatson@debian.org>  Mon, 02 Apr 2012 18:26:09 +0100

grub2 (1.99-18) unstable; urgency=low

  [ Colin Watson ]
  * Ensure that /sbin and /usr/sbin are in $PATH when running tests (closes:
    #662916).
  * mkconfig_loopback.patch: Use different GRUB loop devices for different
    OS loop devices (thanks, bcbc; LP: #888281).
  * Backport from upstream:
    - Add support for LZO compression in btrfs (LP: #727535).
    - Fix efiemu configure check.

  [ Ilya Yanok ]
  * Backport from upstream:
    - Make FAT UUID uppercase to match Linux (LP: #948716).

  [ Debconf translations ]
  * Norwegian Bokmål (Hans Fredrik Nordhaug). 
  * Gujarati (Kartik Mistry).  Closes: #663542
